--- a/src/Frontend/src/app/Feature/Products/all-products/all-products.html
+++ b/src/Frontend/src/app/Feature/Products/all-products/all-products.html
@@ -21,8 +21,11 @@
       </button>
     </div>
   </div>
-
-  <div *ngIf="filteredProducts.length === 0" class="text-muted text-center">No products found.</div>
+  <div *ngIf="loadingProducts" class="text-center p-5">
+  <div class="spinner-border text-primary" role="status"></div>
+  <p class="mt-3">Loading products ...</p>
+</div>
+  <!-- <div *ngIf="filteredProducts.length === 0" class="text-muted text-center">No products found.</div> -->
 
   <div class="row g-4 justify-content-center">
     <div *ngFor="let product of filteredProducts" class="col-6 col-sm-4 col-md-3">
@@ -35,11 +38,19 @@
             style="height: 180px; object-fit: cover;">
         </a>
         <div class="card-body text-center d-flex flex-column">
-          <h6 class="card-title text-truncate mb-2">{{ product.name }}</h6>
-          <p class="text-primary mb-3">{{ product.price | currency:'USD' }}</p>
+          <h6 class="card-title text-truncate mb-2">Name : {{ product.name }}</h6>
+          <h6 class=" text-muted my-2">Type : {{ product.productTypeName }}</h6>
+          <p class="text-primary mb-3">Price : {{ product.price | currency:'USD' }}</p>
+          @if(product.quantity>0){
+            <p class="text-dark">In Stock : {{ product.quantity  }}</p>
+          }
+          @else {
+            <p class="text-danger">Out of stock</p>
+
+          }
           <button 
             class="btn btn-sm btn-outline-primary mt-auto mx-auto rounded-pill px-3"
-            (click)="addToCart(product)" title="Add to cart">
+            (click)="addToCart(product)" title="Add to cart"> Add to Cart
             <i class="bi bi-cart-plus"></i>
           </button>
         </div>
