--- a/src/Frontend/src/app/Feature/header/header.css
+++ b/src/Frontend/src/app/Feature/header/header.css
@@ -1,3 +1,19 @@
 .pointer {
   cursor: pointer;
 }
+
+
+.cart-badge {
+  position: absolute;
+  top: -5px;
+  right: -10px;
+  background-color: red;
+  color: white;
+  border-radius: 50%;
+  padding: 2px 6px;
+  font-size: 12px;
+  font-weight: bold;
+  line-height: 1;
+  min-width: 20px;
+  text-align: center;
+}
