complete adoption cycle

--- a/src/Frontend/src/app/Feature/admin-dashboard/admin-dashboard/admin-pets/admin-pets.html
+++ b/src/Frontend/src/app/Feature/admin-dashboard/admin-dashboard/admin-pets/admin-pets.html
@@ -49,10 +49,10 @@
           >
             {{
               pet.status === 0
-                ? "Pending"
+                ? "Owned"
                 : pet.status === 1
-                ? "Approved"
-                : "Rejected"
+                ? "For Addoption"
+                : "For Rescue"
             }}
           </span>
         </td>
