--- a/src/Frontend/src/app/Feature/customer-profile/Profile/customer-profile.html
+++ b/src/Frontend/src/app/Feature/customer-profile/Profile/customer-profile.html
@@ -341,6 +341,17 @@
       <!-- My Pets Section -->
       <div class="mb-3 p-3">
         <h3 class="mb-5 text-center fw-bold">My Pets</h3>
+        <div
+          *ngIf="!loadingPets && myPets.length === 0"
+          class="alert alert-info text-center"
+        >
+          You haven’t pets yet.
+          <a routerLink="/pets">Adopt or Rescue a pet Now!</a>
+        </div>
+        <div *ngIf="loadingPets" class="text-center p-5">
+          <div class="spinner-border text-primary" role="status"></div>
+          <p class="mt-3">Loading Pets...</p>
+        </div>
         <div class="row justify-content-center team">
           <div
             class="col-md-6 col-lg-3"
