--- a/src/Frontend/src/app/Feature/header/header.html
+++ b/src/Frontend/src/app/Feature/header/header.html
@@ -189,8 +189,11 @@
           data-bs-toggle="dropdown"
         >
           <img
-            *ngIf="profileData"
-            [src]="getFullImageUrl(profileData.imgUrl)"
+            [src]="
+              getFullImageUrl(
+                profileData?.imgUrl || 'assets/images/default-avatar.png'
+              )
+            "
             class="rounded-circle me-2"
             width="32"
             height="32"
