--- a/src/Frontend/src/app/Feature/customer-profile/Profile/customer-profile.html
+++ b/src/Frontend/src/app/Feature/customer-profile/Profile/customer-profile.html
@@ -40,7 +40,7 @@
             "
             alt="avatar"
             class="rounded-circle img-fluid"
-            style="width: 150px"
+            style="width: 150px; height: 150px"
           />
           <h5 class="my-3">
             {{ profileData?.fName }} {{ profileData?.lName }}
