--- a/src/Frontend/src/app/Feature/customer-profile/Profile/customer-profile.html
+++ b/src/Frontend/src/app/Feature/customer-profile/Profile/customer-profile.html
@@ -64,6 +64,14 @@
             >
               Add Pets
             </button>
+
+                        <button
+              type="button"
+              class="btn btn-outline-primary ms-1"
+              routerLink="/orders"
+            >
+              Show Orders
+            </button>
           </div>
         </div>
       </div>
