--- a/src/Frontend/src/app/Feature/orders/orders.html
+++ b/src/Frontend/src/app/Feature/orders/orders.html
@@ -25,6 +25,7 @@
               <th>Price</th>
               <th>Quantity</th>
               <th>Image</th>
+               <th>Status</th> 
             </tr>
           </thead>
           <tbody>
@@ -39,6 +40,9 @@
                   class="img-thumbnail" 
                   style="width: 80px; height: 80px; object-fit: contain;">
               </td>
+       <td [ngClass]="getStatusClass(orderStatusEnum[product.orderProductStatus])">
+           {{ orderStatusEnum[product.orderProductStatus] }}
+                </td>
             </tr>
           </tbody>
         </table>
