status is shown successfully - can add products with quantity - fixed few bug issues - seller can deny product

--- a/src/Frontend/src/app/Feature/Seller/dashboard/dashboard.html
+++ b/src/Frontend/src/app/Feature/Seller/dashboard/dashboard.html
@@ -208,10 +208,10 @@
                   Ship Order
                 </button>
                 }
-              @if(order.orderProductStatus === 1) {
+              @if(order.orderProductStatus === 0) {
                 <button class="btn btn-view" (click)="arrivedOrder({orderId:order.orderId,productId:order.productId,orderProductStatus:order.orderProductStatus})">
                   <i class="icon-eye"></i>
-                   Order Arrived
+                   Deny Order 
                 </button>
                 }
               </td>
