--- a/src/Frontend/src/app/Feature/header/header.html
+++ b/src/Frontend/src/app/Feature/header/header.html
@@ -29,6 +29,14 @@
             >Doctors</a
           >
         </li>
+        <li class="nav-item">
+          <a
+            class="nav-link text-dark"
+            routerLink="/blog"
+            routerLinkActive="active"
+            >Blog</a
+          >
+        </li>
         <li class="nav-item dropdown" routerLinkActive="active">
           <a
             class="nav-link dropdown-toggle text-dark"
