fixed few bugs - seller can add to stock now

--- a/src/Frontend/src/app/Feature/Seller/dashboard/dashboard.css
+++ b/src/Frontend/src/app/Feature/Seller/dashboard/dashboard.css
@@ -364,9 +364,9 @@
   color: #1e40af;
 }
 
-.status-delivered {
-  background-color: #d1fae5;
-  color: #065f46;
+.status-deny {
+  background-color: #f50c0c;
+  color: #f3f4f6;
 }
 
 .status-default {
